--- a/src/app/dashboard/placeholder/placeholder.component.html
+++ b/src/app/dashboard/placeholder/placeholder.component.html
@@ -1,9 +1,9 @@
 <div class="wrap position-relative">
-    <div class="position-absolute top-50 start-50 translate-middle">
-        <div class="d-flex flex-column justify-content-center align-items-center">
-            <img src="../../../assets/icons/block.svg" alt="">
-            <h5>Access denied</h5>
-            <p class="text-muted">Please login</p>
-        </div>
+  <div class="position-absolute top-50 start-50 translate-middle">
+    <div class="d-flex flex-column justify-content-center align-items-center">
+      <img class="mb-4" src="../../../assets/icons/block.svg" alt="padlock">
+      <h5 class="fw-bold">Access denied</h5>
+      <p class="text-muted">Please login</p>
     </div>
+  </div>
 </div>
