--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,25 +1,25 @@
 <div class="wrapper d-flex justify-content-center align-items-center">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-5 d-flex flex-column justify-content-center py-5 py-md-0 px-3 px-md-5">
-                <div class="d-flex flex-column align-items-center">
-                    <div class="img-wrapper d-flex justify-content-center align-items-center mb-4">
-                        <img class="rounded-circle" src="../../assets/icons/75.jpeg" alt="">
-                    </div>
-                    <div class="text-center mb-5">
-                        <p class="fw-bold mb-0">Gavin Dicton</p>
-                        <small>kkkd@ddjksjakjds</small>
-                    </div>
-                </div>
-                <app-tabs></app-tabs>
-            </div>
-            <div class="col-md-7 p-3 p-md-0">
-                <div class="card border-0">
-                    <div class="tab-content w-100" id="myTabContent">
-                        <router-outlet></router-outlet>
-                      </div>
-                  </div>
-            </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-5 d-flex flex-column justify-content-center mb-2 py-4 py-lg-0 px-3 px-lg-5">
+        <div class="d-flex flex-column align-items-center">
+          <div class="img-wrapper d-flex justify-content-center align-items-center mb-4">
+            <img class="rounded-circle" [src]="user.picture.large" alt="">
+          </div>
+          <div class="text-center mb-5">
+            <p class="fw-bold mb-0">{{user.name.first}} {{user.name.last}}</p>
+            <small>{{user.email}}</small>
+          </div>
         </div>
+        <app-tabs></app-tabs>
+      </div>
+      <div class="col-lg-7 p-3 p-lg-0">
+        <div class="card border-0">
+          <div class="tab-content w-100" id="myTabContent">
+            <router-outlet></router-outlet>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
 </div>
