--- a/src/app/dashboard/tabs/tabs.component.html
+++ b/src/app/dashboard/tabs/tabs.component.html
@@ -1,103 +1,5 @@
-<div class="list-group d-none d-md-block" id="myTab" role="tablist">
-    <a
-      [routerLink]="'/dashboard'"
-      class="dashboard list-group-item list-group-item-action"
-      data-toggle="tab"
-      routerLinkActive="active"
-    >
-    <div class="d-flex align-items-center">
-      <div class="circle me-3">
-        <img class="icons" src="../../../assets/icons/dashboard.svg" alt="">
-      </div>
-      <h6 class="fw-bold mb-0">
-        Dashboard
-      </h6>
-    </div>
-      <i class="fas fa-chevron-right"></i>
-    </a>
-    <a
-      [routerLink]="'/user-profile'"
-      class="user-profile list-group-item list-group-item-action"
-      data-toggle="tab"
-      routerLinkActive="active"
-    >
-    <div class="d-flex align-items-center">
-      <div class="circle me-3">
-        <img class="icons" src="../../../assets/icons/user.svg" alt="">
-      </div>
-      <h6 class="fw-bold mb-0">
-        My profile
-      </h6>
-    </div>
-      <i class="fas fa-chevron-right"></i>
-    </a>
-    <a
-      [routerLink]="'/payments'"
-      class="payments list-group-item list-group-item-action"
-      data-toggle="tab"
-      routerLinkActive="active"
-    >
-    <div class="d-flex align-items-center">
-      <div class="circle me-3">
-        <img class="icons" src="../../../assets/icons/payments.svg" alt="">
-      </div>
-      <h6 class="fw-bold mb-0">
-        Payments
-      </h6>
-    </div>
-      <i class="fas fa-chevron-right"></i>
-    </a>
-    <a
-      [routerLink]="'/messages'"
-      class="messages list-group-item list-group-item-action"
-      data-toggle="tab"
-      routerLinkActive="active"
-    >
-    <div class="d-flex align-items-center">
-      <div class="circle me-3">
-        <img class="icons" src="../../../assets/icons/messages.svg" alt="">
-      </div>
-      <h6 class="fw-bold mb-0">
-        Messages
-      </h6>
-    </div>
-      <i class="fas fa-chevron-right"></i>
-    </a>
-    <a
-      [routerLink]="'/settings'"
-      class="settings list-group-item list-group-item-action"
-      data-toggle="tab"
-      routerLinkActive="active"
-    >
-    <div class="d-flex align-items-center">
-      <div class="circle me-3">
-        <img class="icons" src="../../../assets/icons/settings.svg" alt="">
-      </div>
-      <h6 class="fw-bold mb-0">
-        Settings
-      </h6>
-    </div>
-      <i class="fas fa-chevron-right"></i>
-    </a>
-    <a
-      [routerLink]="'/logout'"
-      class="logout list-group-item list-group-item-action"
-      data-toggle="tab"
-      routerLinkActive="active"
-    >
-    <div class="d-flex align-items-center">
-      <div class="circle me-3">
-        <img class="icons" src="../../../assets/icons/logout.svg" alt="">
-      </div>
-      <h6 class="fw-bold mb-0">
-        Logout
-      </h6>
-    </div>
-      <i class="fas fa-chevron-right"></i>
-    </a>
-</div>
-
-<div class="d-flex d-md-none overflow-auto" id="myTab" role="tablist">
+<!-- Mobile tabs-->
+<div class="list-group-mobile d-flex d-lg-none overflow-auto" id="myTab" role="tablist">
   <a
     [routerLink]="'/dashboard'"
     class="dashboard list-group-mobile-item list-group-item-action me-2"
@@ -106,11 +8,9 @@
   >
   <div class="d-flex align-items-center">
     <div class="me-3">
-      <img class="icons" src="../../../assets/icons/dashboard.svg" alt="">
+      <img class="icons" src="../../../assets/icons/dashboard.svg" alt="dashboard-icon">
     </div>
-    <h6 class="fw-bold text-white mb-0">
-      Dashboard
-    </h6>
+    <h6 class="fw-bold text-white mb-0">Dashboard</h6>
   </div>
   </a>
   <a
@@ -121,11 +21,9 @@
   >
   <div class="d-flex align-items-center">
     <div class="me-3">
-      <img class="icons" src="../../../assets/icons/user.svg" alt="">
+      <img class="icons" src="../../../assets/icons/user.svg" alt="user-icon">
     </div>
-    <h6 class="fw-bold text-white mb-0">
-      My profile
-    </h6>
+    <h6 class="fw-bold text-white mb-0">My profile</h6>
   </div>
   </a>
   <a
@@ -136,11 +34,9 @@
   >
   <div class="d-flex align-items-center">
     <div class="me-3">
-      <img class="icons" src="../../../assets/icons/payments.svg" alt="">
+      <img class="icons" src="../../../assets/icons/payments.svg" alt="payments-icon">
     </div>
-    <h6 class="fw-bold text-white mb-0">
-      Payments
-    </h6>
+    <h6 class="fw-bold text-white mb-0">Payments</h6>
   </div>
   </a>
   <a
@@ -151,11 +47,9 @@
   >
   <div class="d-flex align-items-center">
     <div class="me-3">
-      <img class="icons" src="../../../assets/icons/messages.svg" alt="">
+      <img class="icons" src="../../../assets/icons/messages.svg" alt="messages-icon">
     </div>
-    <h6 class="fw-bold text-white mb-0">
-      Messages
-    </h6>
+    <h6 class="fw-bold text-white mb-0">Messages</h6>
   </div>
   </a>
   <a
@@ -166,11 +60,9 @@
   >
   <div class="d-flex align-items-center">
     <div class="me-3">
-      <img class="icons" src="../../../assets/icons/settings.svg" alt="">
+      <img class="icons" src="../../../assets/icons/settings.svg" alt="settings-icon">
     </div>
-    <h6 class="fw-bold text-white mb-0">
-      Settings
-    </h6>
+    <h6 class="fw-bold text-white mb-0">Settings</h6>
   </div>
   </a>
   <a
@@ -181,11 +73,98 @@
   >
   <div class="d-flex align-items-center">
     <div class="me-3">
-      <img class="icons" src="../../../assets/icons/logout.svg" alt="">
+      <img class="icons" src="../../../assets/icons/logout.svg" alt="logout-icon">
     </div>
-    <h6 class="fw-bold text-white mb-0">
-      Logout
-    </h6>
+    <h6 class="fw-bold text-white mb-0">Logout</h6>
   </div>
   </a>
 </div>
+<!-- End Mobile tabs-->
+<!-- Desktop tabs-->
+<div class="list-group d-none d-lg-block" id="myTab" role="tablist">
+  <a
+    [routerLink]="'/dashboard'"
+    class="dashboard list-group-item list-group-item-action"
+    data-toggle="tab"
+    routerLinkActive="active"
+  >
+  <div class="d-flex align-items-center">
+    <div class="circle me-3">
+      <img class="icons" src="../../../assets/icons/dashboard.svg" alt="dashboard-icon">
+    </div>
+    <h6 class="mb-0">Dashboard</h6>
+  </div>
+    <i class="fas fa-chevron-right"></i>
+  </a>
+  <a
+    [routerLink]="'/user-profile'"
+    class="user-profile list-group-item list-group-item-action"
+    data-toggle="tab"
+    routerLinkActive="active"
+  >
+  <div class="d-flex align-items-center">
+    <div class="circle me-3">
+      <img class="icons" src="../../../assets/icons/user.svg" alt="user-icon">
+    </div>
+    <h6 class="mb-0">My profile</h6>
+  </div>
+    <i class="fas fa-chevron-right"></i>
+  </a>
+  <a
+    [routerLink]="'/payments'"
+    class="payments list-group-item list-group-item-action"
+    data-toggle="tab"
+    routerLinkActive="active"
+  >
+  <div class="d-flex align-items-center">
+    <div class="circle me-3">
+      <img class="icons" src="../../../assets/icons/payments.svg" alt="payments-icon">
+    </div>
+    <h6 class="mb-0">Payments</h6>
+  </div>
+    <i class="fas fa-chevron-right"></i>
+  </a>
+  <a
+    [routerLink]="'/messages'"
+    class="messages list-group-item list-group-item-action"
+    data-toggle="tab"
+    routerLinkActive="active"
+  >
+  <div class="d-flex align-items-center">
+    <div class="circle me-3">
+      <img class="icons" src="../../../assets/icons/messages.svg" alt="messages-icon">
+    </div>
+    <h6 class="mb-0">Messages</h6>
+  </div>
+    <i class="fas fa-chevron-right"></i>
+  </a>
+  <a
+    [routerLink]="'/settings'"
+    class="settings list-group-item list-group-item-action"
+    data-toggle="tab"
+    routerLinkActive="active"
+  >
+  <div class="d-flex align-items-center">
+    <div class="circle me-3">
+      <img class="icons" src="../../../assets/icons/settings.svg" alt="settings-icon">
+    </div>
+    <h6 class="mb-0">Settings</h6>
+  </div>
+    <i class="fas fa-chevron-right"></i>
+  </a>
+  <a
+    [routerLink]="'/logout'"
+    class="logout list-group-item list-group-item-action"
+    data-toggle="tab"
+    routerLinkActive="active"
+  >
+  <div class="d-flex align-items-center">
+    <div class="circle me-3">
+      <img class="icons" src="../../../assets/icons/logout.svg" alt="logout-icon">
+    </div>
+    <h6 class="mb-0">Logout</h6>
+  </div>
+    <i class="fas fa-chevron-right"></i>
+  </a>
+</div>
+<!-- End Desktop tabs-->
