--- a/src/app/dashboard/user-profile/user-profile.component.scss
+++ b/src/app/dashboard/user-profile/user-profile.component.scss
@@ -1,19 +1,20 @@
 dt {
-    font-size: 8px;
-    font-weight: 400;
-    text-transform: uppercase;
-    color: #9A9A9A;
+  font-size: 8px;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: #9A9A9A;
 }
 dd {
-    font-size: 14px;
-    color: #575757;
+  margin-bottom: 0;
+  font-size: 14px;
+  color: #575757;
 }
 .accordion-button:not(.collapsed) {
-    color: #000;
-    background-color: transparent;
-    box-shadow: none;
+  color: #000;
+  background-color: transparent;
+  box-shadow: none;
 }
 .accordion-button:focus {
-    border-color: transparent;
-    box-shadow: none;
+  border-color: transparent;
+  box-shadow: none;
 }
